--- a/assets/index.html
+++ b/assets/index.html
@@ -4,29 +4,31 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="//cdn.muicss.com/mui-0.9.35/css/mui.css">
-  <script src="//cdn.muicss.com/mui-0.9.35/js/mui.js"></script>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-<div class="wrapper">
-  <form action="/test" method="POST" class="mui-form">
-    <legend>Title</legend>
-    <div class="mui-textfield mui-textfield--float-label">
-      <input name='input1' type="text" class="mui--is-empty mui--is-untouched mui--is-pristine">
-      <label>Input 1</label>
+  <div class="wrapper">
+    <form action="/test" method="POST" class="mui-form">
+      <legend>Title</legend>
+      <div class="mui-textfield mui-textfield--float-label">
+        <input name='input1' type="text" class="mui--is-empty mui--is-untouched mui--is-pristine">
+        <label>Input 1</label>
+      </div>
+      <div class="mui-textfield mui-textfield--float-label">
+        <input type="text" name='input2' class="mui--is-empty mui--is-untouched mui--is-pristine">
+        <label>Input 2</label>
+      </div>
+      <div class="mui-textfield mui-textfield--float-label">
+        <textarea name='textarea' class="mui--is-empty mui--is-untouched mui--is-pristine"></textarea>
+        <label>Textarea</label>
+      </div>
+      <button type="submit" class="mui-btn mui-btn--raised">Submit</button>
+    </form>
+    <div class="mui-panel result">
     </div>
-    <div class="mui-textfield mui-textfield--float-label">
-      <input type="text" name='input2' class="mui--is-empty mui--is-untouched mui--is-pristine">
-      <label>Input 2</label>
-    </div>
-    <div class="mui-textfield mui-textfield--float-label">
-      <textarea name='textarea' class="mui--is-empty mui--is-untouched mui--is-pristine"></textarea>
-      <label>Textarea</label>
-    </div>
-    <button type="submit" class="mui-btn mui-btn--raised">Submit</button>
-  </form>
-</div>
+  </div>
 
+  <script src="js/bundle.js" charset="utf-8"></script>
 </body>
 </html>
